# GMLIB

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  manifest.json  prepare_libraries.cmd  tooth.json  xmake.lua
.github/ISSUE_TEMPLATE/: bug_report_zh.yml  feature_request_zh.yml
.github/workflows/: Build.yml  build.yml  release.yml  update_sdk.yml
GMLIB/: manifest.json
bins/DLL/GMLIB/: manifest.json
bins/SDK/lib/: GMLIB.lib
include/: include_all.h
include/GMLIB/: DllExport.h  GMLIB.h  GlobalServiceAPI.h  Macros.h  include_lib.h  include_ll.h  include_ll.py  include_mc.h
include/GMLIB/Enum/: DimensionNameFormat.h  FillMode.h  WeatherType.h
include/GMLIB/Files/: FileUtils.h  JsonConfig.h  JsonFile.h  JsonLanguage.h  LangLanguage.h  ResourceLanguage.h
include/GMLIB/Mod/: CustomBiome.h  CustomDamageCause.h  (+3 more)
include/GMLib/: GMLib_ModAPI.h  GMLib_ServerAPI.h
lib/: GMLib.lib  GMLib_ModAPI.h
scripts/: after_build.lua
src/: Entry.cc  Entry.h  GMLIB.cc  Global.h  GlobalHeader.h  GlobalService.cc  GlobalServiceAPI.cc  Main.cpp  MemoryOperators.cc  Plugin.cc  Plugin.cpp  Plugin.h  RemoteCall.cpp  Version.h  dllmain.cc  dllmain.cpp  include_all.h  version.h
src/Files/: FileUtils.cc  JsonConfig.cc  JsonFile.cc  JsonLanguage.cc  LangLanguage.cc  McLang.cc  ResourceLanguage.cc
src/Mod/: UnknownBlock.cc
src/Server/: ActorAPI.cc  BinaryStreamAPI.cc  CompoundTagAPI.cc  FakeListAPI.cc  FloatingTextAPI.cc  I18nAPI.cc  ItemStackAPI.cc  LevelAPI.cc  PlayerAPI.cc  ScoreboardAPI.cc  SpawnerAPI.cc  StorageAPI.cc  UserCache.cc
src/ServerAPI/: EducationEdition.cpp  FloatingText.cpp  LevelSettings.cpp  ServerSetting.cpp  Spawner.cpp
src/Utils/: StringUtils.cc
(+168 files in other folders)
